@@ -12975,8 +12975,8 @@ Standard deviations:
 > flush(stderr()); flush(stdout())
 > 
 > ### Name: print.ts
-> ### Title: Printing Time-Series Objects
-> ### Aliases: print.ts
+> ### Title: Printing and Formatting of Time-Series Objects
+> ### Aliases: format.ts print.ts
 > ### Keywords: ts
 > 
 > ### ** Examples
@@ -12985,6 +12985,18 @@ Standard deviations:
    p1 p2 p3 p4 p5 p6 p7
 12     1  2  3  4  5  6
 13  7  8  9 10         
+> 
+> print(sunsp.1 <- window(sunspot.month, end=c(1756, 12)))
+       Jan   Feb   Mar   Apr   May   Jun   Jul   Aug   Sep   Oct   Nov   Dec
+1749  58.0  62.6  70.0  55.7  85.0  83.5  94.8  66.3  75.9  75.5 158.6  85.2
+1750  73.3  75.9  89.2  88.3  90.0 100.0  85.4 103.0  91.2  65.7  63.3  75.4
+1751  70.0  43.5  45.3  56.4  60.7  50.7  66.3  59.8  23.5  23.2  28.5  44.0
+1752  35.0  50.0  71.0  59.3  59.7  39.6  78.4  29.3  27.1  46.6  37.6  40.0
+1753  44.0  32.0  45.7  38.0  36.0  31.7  22.0  39.0  28.0  25.0  20.0   6.7
+1754   0.0   3.0   1.7  13.7  20.7  26.7  18.8  12.3   8.2  24.1  13.2   4.2
+1755  10.2  11.2   6.8   6.5   0.0   0.0   8.6   3.2  17.8  23.7   6.8  20.0
+1756  12.5   7.1   5.4   9.4  12.5  12.9   3.6   6.4  11.8  14.3  17.0   9.4
+> m <- .preformat.ts(sunsp.1) # a character matrix
 > 
 > 
 > 
